Changes for 1.0.4

* Strong AI fix bid purchasing and put in code for blitzing empty territories (Kevin Moore)

* show line/column of xml errors when a game fails to parse (sgb)

* Modify AI: Apply purchasing changes to sea units (Kevin Moore)

* Show user ip/port lobby server tries to connect to when hosting a game fails because the computer is not reachable from the lobby server (sgb)

*  Modified AI: purchasing for seaLion, improved blitzing, tweaked combat and non-combat to better protect capitals and factories, add comments in SUtils (Kevin Moore)

* fix bug 2808834 online games suddenly fail (sgb)

* fix bug 2806095, missing files in mac build (sgb)

* Add some AA50 test cases

* Fix bug 2459410 Fighters on carriers with allied fighters can't attack (ComradeKev)

* Fix bug 2807115 Air improperly calculating max distance with existing carriers (ComradeKev)

* Fix exceptions when undoing a paratroop attack move (ComradeKev)

* Fix aircraft being able to fly too far when building carriers (ComradeKev)

* Fix bug 2806723 ships allowed to move through enemy navies during combat move (ComradeKev)

* Fixed stopping in zone with ignored units causes movement to end (ComradeKev)

* Added AA50 Technology Tree to game notes (ComradeKev)

* Check defending units for attack power before popping kamikaze message (ComradeKev)

* Add method to land paratroops (remove dependence on bombers) (ComradeKev)

* Fix 1 AA hit kills all paratroops (ComradeKev)

* Fix paratroops refusing to fight (ComradeKev)

Changes for 1.0.3.4

* Better internet ip detection (sgb)

* Fix bug where a territory could not be strategic bombed and conquered in the same turn (sgb)

* Fix bug 2804677 Retreating into enemy spaces (sgb)

* Add menu to change look and feel (sgb)

* Fix bug 2799810  Admin right-click menu (sgb)

* Fig bug 2801742 Rockets throw error in NWO (sgb)

* Fix bug 2801740 java error in every roll in a PBEM game. (sgb)
