@@ -1,6 +1,6 @@
-Germany (1068,361)
-Russia (1594,260)
+Germany (1100,350)
+Russia (1594,200)
 Japan (2672,593)
 United Kingdom (787,168)
-Italy (995,587)
-Eastern United States (207,402)
+Italy (995,530)
+Eastern United States (100,402)
